--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -p 3001"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
